--- a/website/frontend/styles.css
+++ b/website/frontend/styles.css
@@ -123,7 +123,7 @@ header .title {
 }
 
 #time-slider {
-    width: 80%;
+    width: 60%;
     margin-right: 10px;
 }
 
@@ -142,7 +142,7 @@ header .title {
     flex-grow: 1;
     margin-top: 20px;
     padding: 20px;
-   min-height: 100hv;
+   min-height: 70vh;
 }
 
 /* Annotation Button */
