--- a/website/frontend/styles.css
+++ b/website/frontend/styles.css
@@ -85,6 +85,7 @@ body {
     display: flex;
     flex-direction: column;
     padding: 20px;
+    height: 90vh;
 }
 
 header {
@@ -180,8 +181,8 @@ header .title {
 .dropdown-content {
     display: none;
     position: absolute;
-    bottom:60px;
-    left: 730px;
+    top:200px;
+    right: 50px;
     background-color: rgb(207, 198, 198);
     width: 250px; min-height:200px;
     padding: 15px;
